force-app/main/default/objects/Sample__c/fields/Sample_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Date__c</fullName>
    <label>Sample Request Date</label>
    <type>Date</type>
</CustomField>