force-app/main/default/objects/Sample__c/fields/Sample_Request_Source__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Source__c</fullName>
    <label>Sample Request Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Intershop</fullName>
            </value>
            <value>
                <fullName>Sampling Form</fullName>
            </value>
            <value>
                <fullName>External Database</fullName>
            </value>
            <value>
                <fullName>Customer Service</fullName>
            </value>
            <value>
                <fullName>Local Database</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>