force-app/main/default/objects/Sample__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <label>Sample Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Value 1</fullName>
            </value>
            <value>
                <fullName>Value 2</fullName>
            </value>
            <value>
                <fullName>NCC</fullName>
            </value>
            <value>
                <fullName>Pads</fullName>
            </value>
            <value>
                <fullName>Beans</fullName>
            </value>
            <value>
                <fullName>Filter</fullName>
            </value>
            <value>
                <fullName>Tea</fullName>
            </value>
            <value>
                <fullName>Instant</fullName>
            </value>
            <value>
                <fullName>Roast&amp;Ground</fullName>
            </value>
            <value>
                <fullName>R2D</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>